--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.560.0",
-    "next": "15.1.6",
+    "next": "^15.1.7",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-day-picker": "^9.12.0",
